--- a/ana.html
+++ b/ana.html
@@ -14,7 +14,7 @@
 </div>
 <div class="aramamenu">
     <ul class="menu">
-     <li class="explore"><a href ="https://github.com/explore">Explore</a></li>
+     <li class="explore"><a href ="explore.html">Explore</a></li>
     <li class="features"><a href="https://github.com/features">Features</a></li>
     <li class="enterprise"><a href="https://enterprise.github.com/"> Enterprise</a></li>
     <li class="blog"><a href="https://github.com/blog">Blog</a></li>
